[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dungeo-ai"
version = "1.0.0"
description = "OpenSource AI Dungeon Adventure with AI-generated storytelling and optional TTS support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.11"
authors = [
    {name = "Laszlo", email = ""}
]
keywords = ["ai", "game", "text-adventure", "ollama", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "requests>=2.31.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
    "pyyaml>=6.0.0",
    "pyqt5>=5.15.11",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
dungeo-ai = "main:main"

[project.urls]
Homepage = "https://github.com/Laszlobeer/Dungeo_ai"
Repository = "https://github.com/Laszlobeer/Dungeo_ai"
Issues = "https://github.com/Laszlobeer/Dungeo_ai/issues"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "gui.py",
    "dungeonaigui.py",
    "localization.py",
    "locales/"
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]
